# rust-uicons

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: image.rs  main.rs  pokemon.rs  uicons.rs
uicons/artificial/png/: index.json
uicons/artificial/png/pokemon/: index.json
uicons/artificial/svg/: index.json
uicons/artificial/svg/pokemon/: index.json
uicons/artificial/webp/: index.json
uicons/artificial/webp/pokemon/: index.json
uicons/safe/png/: index.json
uicons/safe/png/pokemon/: index.json
uicons/safe/svg/: index.json
uicons/safe/svg/pokemon/: index.json
uicons/safe/webp/: index.json
uicons/safe/webp/pokemon/: index.json
