[package]
name = "rust-uicons"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24.6", features = ["png", "webp-encoder"] }
num_cpus = "1.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
resvg = "0.34.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.97"
tiny-skia = "0.11.1"
tokio = { version = "1.28.2", features = ["full"] }
usvg = "0.34.1"
